src/styles/blocks/_blocks.scss
.main-body-wrapper {
	position: relative;
	padding-top: 6rem;

	@media screen and (min-width: 992px) {
		padding-top: 13.6rem;
	}
}

.banner {
	background-image: url('/dist/images/header-bg.jpg');
	background-size: cover;
	background-position: center;
	padding: 10.5rem 1rem 22rem;
	position: relative;
	margin-bottom: -11rem;

	@media screen and (min-width: 768px) {
		padding: 10.5rem 10rem 22rem;
	}

	&:before {
		content: '';
		position: absolute;
		top: 0;
		left: 0;
		height: 18rem;
		width: 100%;
		background-image: linear-gradient(to top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.23) 100%);
	}
}

.content-tree-section {
	padding-bottom: 11rem;
}

.large-container {
	position: relative;
	background-color: $white;
	box-shadow: 0 0 179px 9px rgba(224, 222, 221, 0.14);
	padding: 3rem 1rem 0;

	@media screen and (min-width: 768px) {
		padding: 10rem 0 0;
	}

	@media screen and (min-width: 992px) {
		padding: 10rem 7.9rem 0 8rem;
	}

	@media screen and (min-width: 1200px) {
		padding: 10rem 12.9rem 0 13rem;
	}
}

.tree-wrap {
	position: relative;

	.tree-branch {

		padding-bottom: 2rem;

		@media screen and (min-width: 768px) {
			display: flex;
			padding-bottom: 0;
		}

		&:not(:last-child) {

			@media screen and (min-width: 992px) {
				min-height: 650px;
			}

			.tree-branch-img {
				padding-bottom: 4.5rem;		

				// @media screen and (min-width: 768px) {
				// 	padding-bottom: 38.5rem;
					
				// }
			}
		}

		.tree-branch-img, .tree-branch-text {
			width: 100%;
			

			@media screen and (min-width: 768px) {
				width: 50%;
				display: inline-block;
			}
		}

		.tree-branch-img {

			@media screen and (max-width: 767px) {
				padding-bottom: 4rem;
			}

			@media screen and (min-width: 992px) {
				width: calc(50% - 0.5px)
			}

			img {
				width: 100%;
				height: auto;
			}		
		}

		.tree-branch-text {

			@media screen and (max-width: 767px) {
				text-align: center;
				padding: 0 1.5rem 0;
				background-color: $white;
			}

			@media screen and (min-width: 992px) {
				width: calc(50% + 0.5px);
			}

			.tree-icon {
				position: relative;
				width: 8.4rem;
				height: 8.4rem;
				display: inline-block;

				@media screen and (min-width: 768px) {
					&:before {
						position: absolute;
						content: '';
						top: 4.1rem;
						width: 7rem;
						height: 0.1rem;
						background: $pr-green;
					}
				}				

				img {
					width: 100%;
					height: 100%;
				}
			}

			h2 {
				margin: 3rem 0 1.5rem;
			}
		}
	}

	.tree-branch.right-text {
		.tree-branch-text {
			@media screen and (min-width: 768px) {
				padding: 0 0 4rem 7rem;
				border-left: 1px solid $pr-green;

			}

			@media screen and (min-width: 768px) {
				padding: 0 0 4rem 7rem;
			}

			@media screen and (min-width: 1200px) {
				padding: 0 5rem 4rem 7rem;
			}
		}

		.tree-icon {

			&:before {
				left: -7rem;
			}
		}
	}

	.tree-branch.left-text {
		text-align: right;

		.tree-branch-text {
			@media screen and (min-width: 768px) {
				padding: 0 7rem 4rem 0;
				border-right: 1px solid $pr-green;
			}

			@media screen and (min-width: 1200px) {
				padding: 0 7rem 4rem 5rem;
			}
		}

		.tree-icon {
			position: relative;
			width: 8.4rem;
			height: 8.4rem;

			&:before {
				right: -7rem;
			}
		}
	}

	.tree-branch:last-child {
		.tree-branch-text {
			@media screen and (min-width: 768px) {
				padding-bottom: 0!important;
				border: none;
				width: calc(50% - 0.5px);
			}
		}

		.tree-branch-img {
			@media screen and (min-width: 768px) {
				width: calc(50% + 0.5px);

				img {
					border-right: 1px solid $pr-green;
				}
			}			
		}
	}
}

.tree-footer {
	background-color: $white;
	padding-top: 5rem;

	@media screen and (min-width: 768px) {
		padding-top: 15rem;
	}

	img {
		width: 80%;
		max-width: 39rem;
	}
}

	

	

